added precompiled headers

--- a/Hazel/CMakeLists.txt
+++ b/Hazel/CMakeLists.txt
@@ -12,6 +12,9 @@ add_library(${PROJECT_NAME} SHARED
 	./src/Hazel.h
 )
 
+target_precompile_headers(${PROJECT_NAME}
+	PUBLIC	./src/hzpch.h)
+
 set_target_properties(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM})
 set_target_properties(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM})
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM})
