--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.21.4)
 # Application Name and Platform
 set(CMAKE_GENERATOR_PLATFORM x64)
 set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_STANDARD 17)
 project(Sandbox) 
 
 # Link To Hazel
