added docking imgui

--- a/Hazel/CMakeLists.txt
+++ b/Hazel/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(${PROJECT_NAME} SHARED
 	./src/Hazel/Events/ApplicationEvent.h
 	./src/Hazel/Events/MouseEvent.h
 	./src/Hazel/Events/KeyEvent.h
+	./src/Hazel/ImGui/ImGuiBuild.cpp
 	./src/Hazel/ImGui/ImGuiLayer.cpp
 	./src/Hazel.h
 	./src/Hazel/Window.h
@@ -20,10 +21,6 @@ add_library(${PROJECT_NAME} SHARED
 	./src/Hazel/MouseButtonCodes.h
 	./src/Platform/Windows/WindowsWindow.cpp
 	./src/Platform/Windows/WindowsInput.cpp
-	./src/Platform/OpenGL/ImGuiRenderer.cpp
-	./src/Platform/OpenGL/imgui_impl_opengl3.cpp
-	./src/Platform/OpenGL/imgui_impl_opengl3_loader.h
-	./src/Platform/OpenGL/imgui_impl_glfw.cpp
 )
 
 target_precompile_headers(${PROJECT_NAME}
@@ -38,6 +35,7 @@ add_subdirectory(./vendor/spdlog)
 add_subdirectory(./vendor/glfw)
 add_subdirectory(./vendor/glad)
 add_subdirectory(./vendor/imgui)
+add_subdirectory(./vendor/glm)
 
 target_include_directories(${PROJECT_NAME}
 	PUBLIC  "${PROJECT_SOURCE_DIR}/vendor/spdlog/include"
