changed Hazel to static lib and added render context class

--- a/Hazel/CMakeLists.txt
+++ b/Hazel/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CMAKE_GENERATOR_PLATFORM x64)
 project(HAZEL_LIGHT) #light version of the Hazel Game Engine By @TheCherno
 
-add_library(${PROJECT_NAME} SHARED 
+add_library(${PROJECT_NAME} 
 	./src/Hazel/Core.h
 	./src/Hazel/Application.cpp
 	./src/Hazel/Log.cpp
@@ -12,6 +12,7 @@ add_library(${PROJECT_NAME} SHARED
 	./src/Hazel/Events/ApplicationEvent.h
 	./src/Hazel/Events/MouseEvent.h
 	./src/Hazel/Events/KeyEvent.h
+	./src/Hazel/Renderer/GraphicsContext.h
 	./src/Hazel/ImGui/ImGuiBuild.cpp
 	./src/Hazel/ImGui/ImGuiLayer.cpp
 	./src/Hazel.h
@@ -21,6 +22,7 @@ add_library(${PROJECT_NAME} SHARED
 	./src/Hazel/MouseButtonCodes.h
 	./src/Platform/Windows/WindowsWindow.cpp
 	./src/Platform/Windows/WindowsInput.cpp
+	./src/Platform/OpenGL/OpenGLContext.cpp
 )
 
 target_precompile_headers(${PROJECT_NAME}
@@ -38,22 +40,22 @@ add_subdirectory(./vendor/imgui)
 add_subdirectory(./vendor/glm)
 
 target_include_directories(${PROJECT_NAME}
-	PUBLIC  "${PROJECT_SOURCE_DIR}/vendor/spdlog/include"
-	PRIVATE "${PROJECT_SOURCE_DIR}/vendor/glfw/include"
-	PRIVATE "${PROJECT_SOURCE_DIR}/vendor/glad/include"
-	PRIVATE "${PROJECT_SOURCE_DIR}/vendor/imgui"	
-	PRIVATE "${PROJECT_SOURCE_DIR}/src/Hazel"
-	PRIVATE "${PROJECT_SOURCE_DIR}/src"
+	PUBLIC "${PROJECT_SOURCE_DIR}/vendor/spdlog/include"
+	PUBLIC "${PROJECT_SOURCE_DIR}/vendor/glfw/include"
+	PUBLIC "${PROJECT_SOURCE_DIR}/vendor/glad/include"
+	PUBLIC "${PROJECT_SOURCE_DIR}/vendor/imgui"	
+	PUBLIC "${PROJECT_SOURCE_DIR}/src/Hazel"
+	PUBLIC "${PROJECT_SOURCE_DIR}/src"
 )
 target_link_directories(${PROJECT_NAME}
-	PRIVATE "${PROJECT_BINARY_DIR}/vendor/spdlog/${CMAKE_BUILD_TYPE}"
-	PRIVATE "${PROJECT_BINARY_DIR}/vendor/glfw/src/${CMAKE_BUILD_TYPE}"
+	PUBLIC "${PROJECT_BINARY_DIR}/vendor/spdlog/${CMAKE_BUILD_TYPE}"
+	PUBLIC "${PROJECT_BINARY_DIR}/vendor/glfw/src/${CMAKE_BUILD_TYPE}"
 )
 target_link_libraries(${PROJECT_NAME}
-	PRIVATE glad
-	PRIVATE imgui
-	PRIVATE spdlog
-	PRIVATE glfw3
+	PUBLIC glad
+	PUBLIC glfw3
+	PUBLIC imgui
+	PUBLIC spdlog
 )
 
 # Macro definitions
